# rcli

./: .gitignore  Cargo.toml  README.md  cliff.toml  deny.toml  test.http
assets/: b64.txt  blake3.txt  pk.pem  sk.pem
src/: lib.rs  main.rs  utils.rs
src/cli/: b64.rs  base64.rs  csv.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
