[package]
name = "rcli"
version = "0.1.0"
authors = ["Kevin <jieyun1993@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
blake3 = "1.7.0"
clap = { version = "4.5.34", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
zxcvbn = "3.1.0"
